--- a/vol2/vol2-csharp-examples/AIFH-Vol2-MergePhysics/MainWindow.xaml
+++ b/vol2/vol2-csharp-examples/AIFH-Vol2-MergePhysics/MainWindow.xaml
@@ -1,8 +1,8 @@
 ﻿<Window x:Class="AIFH_Vol2_MergePhysics.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
-    </Grid>
+        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
+    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+        <Canvas x:Name="CanvasOutput"/>
+    </ScrollViewer>
 </Window>
