--- a/vol2/vol2-csharp-examples/AIFH-Vol2-MergePhysics/MainWindow.xaml
+++ b/vol2/vol2-csharp-examples/AIFH-Vol2-MergePhysics/MainWindow.xaml
@@ -1,8 +1,40 @@
 ﻿<Window x:Class="AIFH_Vol2_MergePhysics.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525" Loaded="Window_Loaded">
-    <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-        <Canvas x:Name="CanvasOutput"/>
-    </ScrollViewer>
+        Title="Merge Physics Multiverse" Height="350" Width="525" Loaded="Window_Loaded" Closing="Window_Closing_1">
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <StackPanel Grid.Row="0" Orientation="Horizontal">
+            <Button x:Name="BtnConfig" Click="BtnConfig_Click">Config...</Button>
+            <Button x:Name="BtnSingleStep" Click="BtnSingleStep_Click">Single Step</Button>
+            <Button x:Name="BtnStart" Click="BtnStart_Click">Start</Button>
+            <Button x:Name="BtnStop" Click="BtnStop_Click">Stop</Button>
+            <Button x:Name="BtnReset" Click="BtnReset_Click">Reset</Button>
+            <CheckBox x:Name="CheckAutoKill" Click="CheckAutoKill_Click">Auto Kill</CheckBox>
+            <Button x:Name="BtnDeselect" Click="BtnDeselect_Click">Deselect</Button>
+        </StackPanel>
+        <ScrollViewer Grid.Row="1" HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
+            <Canvas x:Name="CanvasOutput" MouseDown="CanvasOutput_MouseDown">
+                <Canvas.ContextMenu>
+                    <ContextMenu x:Name="PopupM">
+                        <MenuItem x:Name="MenuSavePhysics" Header="Save Physics" Click="MenuSavePhysics_Click"/>
+                        <MenuItem x:Name="MenuLoadPhysics" Header="Load Physics" Click="MenuLoadPhysics_Click"/>
+                        <Separator/>
+                        <MenuItem x:Name="MenuKillUniverse" Header="Kill Universe" Click="MenuKillUniverse_Checked"/>
+                        <MenuItem x:Name="MenuBigBang" Header="Big Bang" Click="MenuBigBang_Click"/>
+                        <Separator/>
+                        <MenuItem x:Name="MenuMutateAcross" Header="Mutate Across" Click="MenuMutateAcross_Click"/>
+                        <MenuItem x:Name="MenuMutateSingle" Header="Mutate Single" Click="MenuMutateSingle_Click"/>
+                        <MenuItem x:Name="MenuCrossover" Header="Crossover" Click="MenuCrossover_Click"/>
+                        <Separator/>
+                        <MenuItem x:Name="MenuCopyPane" Header="Copy Pane" Click="MenuCopyPane_Click"/>
+                        <MenuItem x:Name="MenuRunSingular" Header="Run Singular" Click="MenuRunSingular_Click"/>
+                    </ContextMenu>
+                </Canvas.ContextMenu>
+            </Canvas>
+        </ScrollViewer>
+    </Grid>
 </Window>
